[(no branch, rebasing DIET-115-Summarize-plan-page)] [(no branch, rebasing DIET-115-Summarize-plan-page)] [DIET-115-Summarize-plan-page] fix: stable scrollbar

--- a/dyeti-frontend/src/index.css
+++ b/dyeti-frontend/src/index.css
@@ -1,4 +1,8 @@
 :root {
+  scrollbar-gutter: stable;
+
+  overflow-y: scroll;
+
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
